** {issue}657[#657]: Make `set-<xyz>-timeout` functions resilient to reasonable non-integer timeouts (e.g., rationals, doubles, etc.). ({person}dgr[@dgr])
** {issue}661[#661]: Fix `:fn/enabled`. ({person}dgr[@dgr])
** {issue}663[#663]: `query` throws a more accurate exception with a more accurate error message when provided with an empty query vector. ({person}dgr[@dgr])
* Docs
** {issue}656[#656]: Correctly describe behavior when query's parameter is a string. The User Guide and `query` doc strings say that a string passed to `query` is interpreted as an XPath expression. In fact, `query` interprets this as either XPath or CSS depending on the setting of the driver's `:locator` parameter, which can be changed. ({person}dgr[@dgr])
* Quality
** {issue}640[#650]: Significantly improved test coverage. ({person}dgr[@dgr])

== v1.1.41 [minor breaking] - 2024-08-14 [[v1.1.41]]

* Minor breaking
** {issue}615[#615]: Etaoin now requires a minimum of JDK11 and Clojure 1.10
({lread})
** {issue}613[#612]: Remove all support for long obsolete and long untested PhantomJS
({lread})
** {issue}467[#467]: Move to W3C WebDriver spec.
({lread})
*** The impetus was Firefox no longer supporting legacy `:capabilities` syntax.
The breaking impact was on Chrome/Edge, when in "w3c mode" it will fail on WebDriver endpoints where there is a viable w3c alternative.
This means some custom Chrome specific fns should now be expressed as w3c WebDriver actions.
The following Chrome-specific fns have been deleted:
**** `mouse-btn-down`
**** `mouse-btn-up`
**** `with-mouse-btn`
**** `mouse-move-to` (was also available in Firefox)
**** `mouse-click`
**** `right-click`
**** `left-click`
**** `touch-down`
**** `touch-move`
**** `touch-up`
*** Remove internal support for undocumented `:desired-capabilities`.
The implementation was either ultra legacy or misunderstood legacy APIs.

* Other changes
** bump all deps to current versions
({lread})